# Juno

./: .gitignore  CLAUDE.md  LICENSE  README.md  client.py  pyproject.toml
docs/: agent-architecture.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
juno/: .detect-secrets.cfg  .dockerignore  .env.example  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  INCIDENT_RESPONSE.md  JUNO_BASE.md  README.md  SECURITY.md  VISION.md  appcast.xml  docker-compose.yml  docs.acp.md  fix2.py  fly.private.toml  fly.toml  juno.mjs  juno.podman.env  knip.config.ts  package.json  pnpm-workspace.yaml  render.yaml  tsconfig.json  tsdown.config.ts
juno/.github/: CODEOWNERS
juno/Swabble/: README.md
juno/docs/: AGENTS.md  auth-credential-semantics.md  brave-search.md  date-time.md  docs.json  index.md  logging.md  network.md  perplexity.md  pi-dev.md  pi.md  prose.md  vps.md
juno/extensions/: AGENTS.md  music-generation-providers.live.test.ts  tsconfig.package-boundary.paths.json  video-generation-providers.live.test.ts
juno/git-hooks/: pre-commit
juno/qa/: frontier-harness-plan.md  new-scenarios-2026-04.md  scenarios.md
juno/scripts/: anthropic-prompt-probe.ts  audit-seams.mjs  auth-monitor.sh  bench-cli-startup.ts  bench-test-changed.mjs  build-all.mjs  build-and-run-mac.sh  build_icon.sh  bundle-a2ui.mjs  canvas-a2ui-copy.ts  changelog-to-html.sh  check-cli-startup-memory.mjs  check-codex-app-server-protocol.ts  check-extension-package-tsc-boundary.mjs  check-extension-plugin-sdk-boundary.mjs  check-gateway-watch-regression.mjs  check-live-cache.ts  check-no-extension-src-imports.ts  check-no-extension-test-core-imports.ts  check-no-monolithic-plugin-sdk-entry-imports.ts  check-no-random-messaging-tmp.mjs  ci-changed-scope.mjs  (+100 more)
openclaw/: CHANGELOG.md  JUNO_BASE.md
server/: __main__.py  cli.py
tests/: _fakes.py  test_agentic_layer.py  test_api_background_smoke.py  test_api_skills_smoke.py  test_api_smoke.py  test_api_voice_smoke.py  test_background_jobs.py  test_config.py  test_event_bus.py  test_inference_ollama.py  test_integrations_caldav.py  test_integrations_imap.py  test_integrations_router.py  test_intent_classifier.py  test_live_api.py  test_macos_jobs.py  test_scheduler.py  test_skill_registry.py  test_skills_individual.py  test_skills_phase5.py  test_voice_audio.py  test_voice_providers.py
(+5545 files in other folders)
