[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juno-server"
version = "0.1.0"
description = "Juno — local-first personal AI assistant. Server."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "websockets>=12.0",
    # python-multipart is required for FastAPI multipart upload parsing
    # (used by /api/voice/transcribe and /api/voice/turn).
    "python-multipart>=0.0.9",
    # Background-layer scheduler (Phase 3). AsyncIOScheduler integrates
    # cleanly with FastAPI's lifespan. SQLAlchemy is used for the
    # SQLite-backed jobstore.
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    # RSS parsing for the news job.
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
# Real speech-to-text + text-to-speech providers. Optional because they
# pull in heavy ML deps and require model downloads. The server runs fine
# without them — the stub providers produce a working API contract.
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
]
# CalDAV calendar backend. Optional because the default backend is
# Apple Calendar.app (no extra deps); CalDAV is the cross-platform path.
calendar = [
    "caldav>=1.3",
]

[project.scripts]
juno = "server.cli:main"

[tool.setuptools.packages.find]
include = ["server*"]
exclude = ["tests*", "companion*", "docs*", "hardware*", "memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
